--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
