--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
