--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "file-type": "^21.0.0",
     "jose": "^6.0.11",
     "mongoose": "^8.16.2",
     "next": "15.3.5",
