Debug mail service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
         restart: unless-stopped
         depends_on:
             - cubezy-db
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
 
 volumes:
     mongo-data:
