--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
         restart: unless-stopped
         depends_on:
             - cubezy-db
+        extra_hosts:
+            - "mail.cubezy.in:172.20.0.2"
 
 volumes:
     mongo-data:
