--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,22 @@ services:
         extra_hosts:
             - "${EXTRA_HOST_MAIL_DOMAIN}:${EXTRA_HOST_MAIL_IP}"
 
+    cubezy-minio:
+        image: minio/minio:latest
+        container_name: cubezy-minio
+        restart: unless-stopped
+        environment:
+            - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+            - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+        volumes:
+            - minio-data:/data
+        command: server /data
+        ports:
+            - "9000:9000"
+
 volumes:
     mongo-data:
+    minio-data:
 
 networks:
     default:
