--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
             - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
         volumes:
             - minio-data:/data
-        command: server /data
+        command: server /data --console-address ":9001"
         ports:
             - "9000:9000"
             - "127.0.0.1:9001:9001"
