--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "file-type": "^21.0.0",
     "jose": "^6.0.11",
     "mongoose": "^8.16.2",
