Fixed build issues

--- a/env.example
+++ b/env.example
@@ -39,3 +39,7 @@ MINIO_REGION="us-east-1"
 # Captcha Configuration (for security)
 NEXT_PUBLIC_CAPTCHA_SITE_KEY=
 CAPTCHA_SECRET_KEY=
+
+# Indexed DB Configuration
+NEXT_PUBLIC_INDEXED_DB_NAME="cubezy_db"
+NEXT_PUBLIC_INDEXED_DB_VERSION="1"
