--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "file-type": "^21.0.0",
     "jose": "^6.0.11",
     "mongoose": "^8.16.2",
-    "next": "15.3.5",
+    "motion": "^12.23.12",
+    "next": "^15.5.2",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
