--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.16.2",
     "motion": "^12.23.12",
     "next": "^15.5.2",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
